# deckman

./: .editorconfig  .eslintrc.js  .flake8  .gitignore  babel.config.js  package.json  pyproject.toml  tsconfig.json  webpack.config.js
.github/workflows/: check.yaml
frontend/: App.tsx  index.tsx
frontend/components/: ProfileEditor.tsx
frontend/components/ProfileEditor/: ProfileEditor.tsx  index.tsx
frontend/components/ProfileEditor/__tests__/: ProfileEditor.test.tsx
frontend/components/__tests__/: ProfileEditor.test.tsx
frontend/src/: index.html
frontend/src/components/: ProfileEditor.tsx
src/deckman/: api.py  main.py  services.py
src/deckman/database/: repos.py  tables.py
src/deckman/database/initial/: profiles.json  qualities.json  settings_lossless.json  settings_lossy.json
src/deckman/db/initial/: profiles.json
src/deckman/db/migrations/: xor.py
src/deckman/info/: musicbrainz.py
src/deckman/model/: album.py  artist.py  events.py  exceptions.py  info_service.py  io.py  label.py  profile.py  series.py  services.py  track.py
src/deckman/orm/: .mapping.py.swo  artist.py  mapping.py  profile.py  repos.py
tests/: conftest.py
tests/integration/: test_api.py  test_database_artist.py  test_sqlalchemy.py
tests/unit/: shared.py  test_model_album.py  test_model_artist.py  test_model_profile.py  test_model_track.py  test_services.py  utils.py
